fixed waybar-tray menu overflow

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -103,7 +103,7 @@ window#waybar.empty #window:hover {
   border: 1px solid #fff;
 }
 
-#tray * {
+#tray {
   padding: 0 4px;
   border-radius: 3px;
   transition:
@@ -111,7 +111,7 @@ window#waybar.empty #window:hover {
     background-color 200ms;
 }
 
-#tray *:hover {
+#tray:hover {
   background-color: rgba(255, 255, 255, 0.35);
   border: 1px solid #fff;
 }
